# tracking_cpp

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
config/: filter.json  sensor.json  sim.json  target.json  tracker.json
include/: KalmanFilter.h  params.h  sensor.h  target.h  targetBelief.h  tracker.h  utils.h
python/: gtsam.py  parse_log.py  parse_sensor_log.py  plot_utils.py
sketch/: armadillo_example.cpp  isam_example2_gpt.cpp  isam_example_gpt.cpp
src/: ISAMFilter.cpp  KalmanFilter.cpp  UnscentedKalmanFilter.cpp
test/: test_kalman_filter.cpp  test_params.cpp  test_sensor.cpp  test_target.cpp
